# tree-sitter-systemverilog

./: .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json  update_tests.sh
.github/workflows/: ci.yml  ci_bind.yml  publish.yml
bindings/c/: tree-sitter-systemverilog.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/rust/: build.rs  lib.rs
doulos/: 1.1_alias.sv  1.2_alias.sv  10.1_bind.sv  100.1_super.sv  101.2_task.sv  101.4_task.sv  101.6_task.sv  102.1_task_enable.sv  105.3_timing_control.sv  106.4_typedef.sv  107.2_union.sv  108.1_unique.sv  108.2_unique.sv  110.2_user_defined_primitive.sv  111.2_variable.sv  113.1_virtual_interface.sv  113.2_virtual_interface.sv  114.1_wait.sv  114.3_wait.sv  114.4_wait.sv  116.1_`begin_keywords.sv  118.1_`ifdef.sv  120.1_`timescale.sv  122.1_assert_(property).sv  122.2_assert_(property).sv  123.1_assume.sv  125.1_checker_instantiation.sv  128.1_expect.sv  129.1_first_match.sv  130.1_implication.sv  131.1_intersect.sv  132.1_or_(sequence_operator).sv  133.2_property.sv  133.3_property.sv  133.4_property.sv  133.5_property.sv  134.1_restrict.sv  135.1_sequence.sv  135.2_sequence.sv  135.4_sequence.sv  (+107 more)
doulos/work/: _info  _lib.qdb  _lib1_0.qdb  _lib1_0.qtl
queries/: highlights.scm
src/: grammar.json  node-types.json
sv-tests/chapter-11/: 11.3.6--assign_in_expression.sv  11.3.6--assignment_in_expression.sv
test/: highlight_paths_file.txt
test/corpus/: 5.6.txt  always.txt  arrays.txt  assign.txt  bit_select.txt  classes.txt  comments.txt  concat.txt  conditional.txt  coverage.txt  (+13 more)
(+3717 files in other folders)
