[package]
name = "tree-sitter-systemverilog"
description = "SystemVerilog 1800-2023 Parser"
version = "0.3.0"
authors = ["Gonzalo M. Larumbe <gonzalomlarumbe@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "systemverilog"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/gmlarumbe/tree-sitter-systemverilog"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
